# e-calendar

./: .gitignore  LICENSE  README.md  connect_calendar.py  landscape.py  main.py  portrait.py  pyproject.toml
lib/: README.md  epd7in5b_HD.py
